[gd_scene load_steps=2 format=3 uid="uid://dl7ed1erl7kmp"]

[ext_resource type="Script" uid="uid://b26k4ger7g1hi" path="res://scripts/hurt_area.gd" id="1_5yssl"]

[node name="HurtArea" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_5yssl")

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="tree_entered" from="InvincibleTimer" to="." method="_on_invincible_timer_tree_entered"]
